--- a/src/components/ui/ArticleCard.css
+++ b/src/components/ui/ArticleCard.css
@@ -12,10 +12,13 @@
 .article_link {
   color: black;
   text-decoration: none;
+
+  box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.208);
+  border-radius: 5px;
 }
 
 .card_title {
-  margin: 0 0 -10px 0;
+  margin: 0;
 }
 
 .article_card_img {
@@ -28,6 +31,7 @@
   display: flex;
   flex-direction: column;
   align-items: start;
+  padding: 5px;
 }
 
 .article_card_content h3 {
@@ -74,18 +78,18 @@
 
 .article_card_hori {
   display: grid;
-  /* grid-column: span 2; */
   grid-template-columns: 1fr 1fr;
   grid-gap: 20px;
-}
-
-.article_suggest_layout {
-  display: flex;
-  flex-direction: column;
+  box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.208);
+  border-radius: 5px;
 }
 
 .hide_desc {
   display: none;
+}
+
+.card_desc {
+  margin-top: -2px;
 }
 
 @media screen and (min-width: 1024px) {
@@ -102,16 +106,38 @@
   .hide_desc {
     display: block;
   }
+
+  .article_card_image_cover {
+    position: relative;
+    aspect-ratio: 16 / 9;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .card_desc {
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3;
+    overflow: hidden;
+  }
+
   .article_card_medium {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 10px;
+
+    box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.208);
+    border-radius: 5px;
   }
 
   .article_suggest_layout {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 10px;
+
+    box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.208);
+    border-radius: 5px;
   }
 }
 
@@ -119,7 +145,10 @@
   .article_card_hori,
   .article_suggest_layout,
   .article_card_medium {
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: 1fr;
+    /* grid-template-rows: 1fr 1fr; */
+    /* display: flex;
+    flex-direction: column; */
   }
 }
