--- a/src/components/ui/Loader.css
+++ b/src/components/ui/Loader.css
@@ -1,9 +1,9 @@
 .loader_section {
-  position: absolute;
+  /* position: absolute;
   top: 0;
   left: 0;
   right: 0;
-  bottom: 0;
+  bottom: 0; */
   width: 100vw;
   height: 100vh;
   display: flex;
