--- a/src/pages/InsideArticlePage.css
+++ b/src/pages/InsideArticlePage.css
@@ -1,3 +1,4 @@
+/* .article_content_image_cover, */
 .article_img {
   position: relative;
   aspect-ratio: 16 / 9;
@@ -5,6 +6,12 @@
   flex-direction: column;
   align-items: center;
 }
+
+.article_content_image_cover img {
+  width: 60%;
+  height: 500px;
+}
+
 .article_img img {
   width: 100%;
   height: 100%;
