--- a/src/pages/InsideArticlePage.css
+++ b/src/pages/InsideArticlePage.css
@@ -189,4 +189,8 @@
   .article_img {
     margin-bottom: 30px;
   }
+  .article_content_image_cover img {
+    width: 100%;
+    height: 100%;
+  }
 }
